Sticky posts fix
sidebar overlap

--- a/style.css
+++ b/style.css
@@ -84,6 +84,7 @@ table th {
 
 .sticky {
 	background-color: rgba( 0,0,0,.1 );
+	z-index: 2;
 }
 
 .wp-caption {
